--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,2 +1,16 @@
-<h1>Pages#home</h1>
-<p>Find me in app/views/pages/home.html.erb</p>
+<%= render 'shared/banner' %>
+<div class="d-flex justify-content-around">
+  <div class="test">
+    <i class="fas fa-users"></i>
+    <p>From person to person</p>
+  </div>
+  <div>
+    <i class="fas fa-shield-alt"></i>
+    <p>Multi-risk insurance</p>
+
+  </div>
+  <div>
+    <i class="fas fa-map-marked-alt"></i>
+    <p>Available in more than 80 cities in France</p>
+  </div>
+</div>
