--- a/app/assets/stylesheets/components/_banner.scss
+++ b/app/assets/stylesheets/components/_banner.scss
@@ -2,7 +2,18 @@
   background-size: cover;
   background-position: center;
   padding: 150px 0;
-  // background-image: linear-gradient(rgba(0,0,0,0.4),rgba(0,0,0,0.4)), url("../../../assets/images/car_banner.jpg");
+  box-shadow: 0px 5px 8px #21282A;
+  .btn {
+    border-radius: 30px;
+    padding: 1rem .8rem 1rem .8rem;
+    background: linear-gradient(#FE6F24, #F93D14);
+    transition: all 300ms ease-in-out;
+    font-weight: bold;
+    &:hover{
+      background: linear-gradient(#F93D14, #FE6F24);
+      transform: scale(104%);
+    }
+  }
 }
 .banner h1 {
   margin: 0;
@@ -10,6 +21,10 @@
   text-shadow: 1px 1px 3px rgba(0,0,0,0.2);
   font-size: 32px;
   font-weight: bold;
+  padding-bottom: 3rem;
+  strong{
+    color: #FE6F24;
+  }
 }
 
 .banner p {
