--- a/app/assets/stylesheets/components/_footer.scss
+++ b/app/assets/stylesheets/components/_footer.scss
@@ -1,18 +1,20 @@
 .footer {
-  background: #F4F4F4;
+  background: #21282A;
   display: flex;
   align-items: center;
   justify-content: space-between;
   height: 100px;
   padding: 0px 50px;
-  color: rgba(0,0,0,0.3);
+  color: whitesmoke;
+  border-top: solid 1px #1d2224;
+  box-shadow: 0px -5px 8px #181b1b;
 }
 .footer-links {
   display: flex;
   align-items: center;
 }
 .footer-links a {
-  color: black;
+  color: whitesmoke;
   opacity: 0.15;
   text-decoration: none;
   font-size: 24px;
@@ -22,5 +24,5 @@
   opacity: 1;
 }
 .footer .fa-heart {
-  color: #D23333;
+  color: $orange;
 }
