--- a/app/views/cars/show.html.erb
+++ b/app/views/cars/show.html.erb
@@ -30,15 +30,35 @@
         <h2 class="mt-3">Book this car</h2>
         <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/daterangepicker/daterangepicker.css" />
 
-      <%= simple_form_for [@car, @car.bookings.new] do |f| %>
-            <span class="d-flex justify-content-between">
-            <%= f.date_field :starts_at, as: :date, required: true, input_html: {class: "datepicker"} %>
-            <%= f.date_field :ends_at, as: :date, required: true, input_html: {class: "datepicker"} %>
-            </span>
-            <h3 id="total-price" data-priceperday="<%= @car.price_per_day %>" class="mt-3 font-weight-bold text-info text-right"></h3>
-            <%= f.button :submit, "Book now !", class: "btn btn-info rounded w-100 mt-3 h-25" %>
-          <% end %>
+
+        <%= simple_form_for [@car, @car.bookings.new], id:"form-date" do |f| %>
+          <span class="d-flex justify-content-between">
+          <input type="text" name="daterange" value="12/16/2021 - 12/17/2021" />
+          <%= f.hidden_field :starts_at, as: :string, required: true, input_html: {class: "datepicker"} %>
+          <%= f.hidden_field :ends_at, as: :string, required: true, input_html: {class: "datepicker"} %>
+          </span>
+          <h3 id="total-price" data-priceperday="<%= @car.price_per_day %>" class="mt-3 font-weight-bold text-info text-right"></h3>
+          <%= f.button :submit, "Book now !", class: "btn btn-info rounded w-100 mt-3 h-25" %>
+        <% end %>
+
       </div>
     </div>
   </div>
 </div>
+
+<script>
+$(function() {
+  $('input[name="daterange"]').daterangepicker({
+    opens: 'left'
+  }, function(start, end, label) {
+    console.log("A new date selection was made: " + start.format('DD/MM/YYYY') + ' to ' + end.format('DD/MM/YYYY'));
+    const starts = start.format('YYYY-MM-DD');
+    const ends = end.format('YYYY-MM-DD');
+    const startDate = document.querySelector("#booking_starts_at");
+    const endDate = document.querySelector("#booking_ends_at");
+
+    startDate.value = starts;
+    endDate.value = ends;
+  });
+});
+</script>
