--- a/app/assets/stylesheets/components/_banner.scss
+++ b/app/assets/stylesheets/components/_banner.scss
@@ -3,6 +3,9 @@
   background-position: center;
   padding: 150px 0;
   box-shadow: 0px 5px 8px #21282A;
+  strong{
+    color: #FE6F24;
+  }
   .btn {
     border-radius: 30px;
     padding: 1rem .8rem 1rem .8rem;
@@ -22,14 +25,15 @@
   font-size: 32px;
   font-weight: bold;
   padding-bottom: 3rem;
-  strong{
-    color: #FE6F24;
-  }
 }
 
 .banner p {
   font-size: 20px;
+  margin-top: 3rem;
   color: white;
-  opacity: .7;
+  opacity: .9;
+  width: 40%;
+  border-radius: 15px;
   text-shadow: 1px 1px 3px rgba(0,0,0,0.2);
+  background-color: rgba(0, 0, 0, .8);
 }
