--- a/app/views/cars/index.html.erb
+++ b/app/views/cars/index.html.erb
@@ -1,47 +1,34 @@
-<div class="row g-0">
-  <div class="container col-6">
-    <div>
+<div class="container">
+  <div class="row g-0">
 
-
-    </div>
+    <div class="col-6">
       <% @cars.each do |car| %>
-        <div class="card mb-3">
-          <div class="row g-0">
-            <div class="col-md-4">
-            photo
+        <div class="card text-center my-4">
+          <div class="card-header d-flex justify-content-around align-items-center">
+            <h4 class="card-title"><%= car.brand %></h4>
+            <h3><%= car.model %></h3>
+          </div>
+          <div class="card-body d-flex justify-content-around align-items-center">
+            <p class="card-text"><i class="fas fa-user-alt"> &nbsp;&nbsp;</i><%= car.user.email %></p>
+            <div>
+              <%= car.price_per_day %>€/Day
+              <%= link_to "More", car_path(car), class: "btn btn-sm btn-warning btn-index" %>
             </div>
-            <div class="col-md-8">
-              <div class="card-body">
-                <div class="d-flex p-1 justify-content-between">
-                  <div class="title-and-kind flex-right">
-                    <h5 class="card-title m-0 font-weight-bold"><%= car.brand %></h5>
-                    <p class="card-title"><small><%= car.model %></small></p>
-                  </div>
-                  <p class="user-name card-text"><small class="text-muted"><%= car.user.email %> &nbsp;&nbsp;<i class="fas fa-user-alt"></i></small></p>
-                </div>
-                <p class="card-text car-description"><%= car.address %></p>
-                <div class="price-card d-flex flex-row-reverse">
-                  <%= link_to "view more", car_path(car), class: "btn btn-sm btn-info" %>
-                  <p class="m-0 pr-3"><%= car.price_per_day %>€/Day</p>
-                </div>
-              </div>
-            </div>
+          </div>
+          <div class="card-footer text-muted">
+            <%= car.address %>
           </div>
         </div>
       <% end %>
     </div>
-  </div>
 
-
-<div class="col-5 content-right">
-
-    <div id="map"
-      style="width: 100%; height: 100vh;"
-      data-markers="<%= @markers.to_json %>"
-      data-mapbox-api-key="<%= ENV['MAPBOX_API_KEY'] %>">
+    <div class="col-6 content-right">
+      <div id="map"
+        style="width: 100%; height: 100vh;"
+        data-markers="<%= @markers.to_json %>"
+        data-mapbox-api-key="<%= ENV['MAPBOX_API_KEY'] %>">
+      </div>
     </div>
-
-</div>
 
   </div>
 </div>
