--- a/app/views/cars/show.html.erb
+++ b/app/views/cars/show.html.erb
@@ -1,15 +1,15 @@
-<div class="row justify-content-md-center mt-3">
+<div id="car-show" class="row justify-content-md-center">
 
-  <div class="col-md-10 p-0 d-flex justify-content-md-center mt-4 position-relative">
+  <div class="col-md-11 p-0 d-flex justify-content-between align-items-center">
 
-    <div class="content-img col-md-5">
-    <%= link_to "< back to index", cars_path, class: "text-info back_to_index" %>
+    <div class="content-img col-md-2">
+    <%= link_to "< back to index", cars_path, class: "btn btn-warning btn-index" %>
     </div>
-        photo
-    <div class="content-right col-md-5 p-3 pl-5">
+
+    <div id="show-card" class="content-right col-md-6 p-2 pl-2">
       <div class="content-name-price d-flex justify-content-between border-bottom">
         <h2><strong><%= @car.model %></strong></h2>
-        <span class="d-flex align-items-end text-info"><h2><strong><%= @car.price_per_day %>€</strong></h2>&nbsp;<h4>/day</h4></span>
+        <span class="d-flex align-items-end text-warning"><h2><strong><%= @car.price_per_day %>€</strong></h2>&nbsp;<h4>/day</h4></span>
       </div>
       <div class="content-description">
         <div>
@@ -24,24 +24,23 @@
         <div>
           <%= @car.address %>
         </div>
-
       </div>
+
       <div class="content-booking border-top mt-2">
-        <h2 class="mt-3">Book this car</h2>
         <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/daterangepicker/daterangepicker.css" />
-
-
-        <%= simple_form_for [@car, @car.bookings.new], id:"form-date" do |f| %>
-          <span class="d-flex justify-content-between">
-          <input type="text" name="daterange" value="12/16/2021 - 12/17/2021" />
-          <%= f.hidden_field :starts_at, as: :string, required: true, input_html: {class: "datepicker"} %>
-          <%= f.hidden_field :ends_at, as: :string, required: true, input_html: {class: "datepicker"} %>
-          </span>
-          <h3 id="total-price" data-priceperday="<%= @car.price_per_day %>" class="mt-3 font-weight-bold text-info text-right"></h3>
-          <%= f.button :submit, "Book now !", class: "btn btn-info rounded w-100 mt-3 h-25" %>
-        <% end %>
-
       </div>
+    </div>
+
+    <div id="show-calendar" class="col-md-3 align-items-center d-flex justify-content-center">
+      <%= simple_form_for [@car, @car.bookings.new], id:"form-date" do |f| %>
+        <span class="d-flex justify-content-between">
+        <input type="text" name="daterange" value="12/16/2021 - 12/17/2021" />
+        <%= f.hidden_field :starts_at, as: :string, required: true, input_html: {class: "datepicker"} %>
+        <%= f.hidden_field :ends_at, as: :string, required: true, input_html: {class: "datepicker"} %>
+        </span>
+        <h3 id="total-price" data-priceperday="<%= @car.price_per_day %>" class="mt-3 font-weight-bold text-info text-right"></h3>
+        <%= f.button :submit, "Book now !", class: "btn-index btn btn-warning mx-5" %>
+      <% end %>
     </div>
   </div>
 </div>
@@ -49,7 +48,7 @@
 <script>
 $(function() {
   $('input[name="daterange"]').daterangepicker({
-    opens: 'left'
+    opens: 'left',
   }, function(start, end, label) {
     console.log("A new date selection was made: " + start.format('DD/MM/YYYY') + ' to ' + end.format('DD/MM/YYYY'));
     const starts = start.format('YYYY-MM-DD');
