--- a/app/views/shared/_banner.html.erb
+++ b/app/views/shared/_banner.html.erb
@@ -1,7 +1,7 @@
 <div class="banner" style="background-image: linear-gradient(rgba(0,0,0,0.4),rgba(0,0,0,0.4)), url(https://images.unsplash.com/photo-1485291571150-772bcfc10da5?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=928&q=80);">
   <div class="container">
     <h1>The Good Car <strong>roll</strong> for <strong id="you">you</strong>!</h1>
-    <p>Change your life and learn to code at one of our campuses around the world.</p>
+    <p>Change your <strong>life</strong> and enjoy driving <strong>any car</strong>.</p>
     <%= link_to "See our cars", cars_path, class:"btn btn-warning btn-flat"%>
   </div>
 </div>
